--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,7 +31,7 @@
     <application
         android:icon="@drawable/ic_launcher_nfc"
         android:label="@string/app_name"
-    >
+        android:theme="@style/AppTheme" >
         <activity android:name="TagViewer"
             android:label="@string/title_scanned_tag"
             android:launchMode="singleTop"
